DLP/src/syntax/y.output
   0  $accept : programa $end

   1  programa : listaDeclaraciones VOID MAIN "()" '{' listaSentencias '}'

   2  declaracion : tipo listaIndentificadores ';'

   3  listaIndentificadores : ID
   4                        | listaIndentificadores ',' ID

   5  listaDeclaraciones :
   6                     | listaDeclaraciones declaracion

   7  listaSentencias :
   8                  | listaSentencias sentencia

   9  listaExpresiones : expresion
  10                   | listaExpresiones ", " expresion

  11  sentencia : escritura
  12            | lectura
  13            | asignacion
  14            | expresion ';'

  15  escritura : WRITE listaExpresiones ';'

  16  lectura : READ listaExpresiones ';'

  17  asignacion : expresion '=' expresion ';'

  18  tipo : INT
  19       | DOUBLE
  20       | CHAR
  21       | tipo '[' CTE_ENTERA ']'

  22  expresion : expresion '+' expresion
  23            | expresion '*' expresion
  24            | expresion '-' expresion
  25            | expresion '/' expresion
  26            | expresion '%' expresion
  27            | expresion '[' expresion ']'
  28            | '-' expresion
  29            | CTE_ENTERA

state 0
	$accept : . programa $end  (0)
	listaDeclaraciones : .  (5)

	.  reduce 5

	programa  goto 1
	listaDeclaraciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : listaDeclaraciones . VOID MAIN "()" '{' listaSentencias '}'  (1)
	listaDeclaraciones : listaDeclaraciones . declaracion  (6)

	CHAR  shift 3
	DOUBLE  shift 4
	INT  shift 5
	VOID  shift 6
	.  error

	declaracion  goto 7
	tipo  goto 8


state 3
	tipo : CHAR .  (20)

	.  reduce 20


state 4
	tipo : DOUBLE .  (19)

	.  reduce 19


state 5
	tipo : INT .  (18)

	.  reduce 18


state 6
	programa : listaDeclaraciones VOID . MAIN "()" '{' listaSentencias '}'  (1)

	MAIN  shift 9
	.  error


state 7
	listaDeclaraciones : listaDeclaraciones declaracion .  (6)

	.  reduce 6


state 8
	declaracion : tipo . listaIndentificadores ';'  (2)
	tipo : tipo . '[' CTE_ENTERA ']'  (21)

	ID  shift 10
	'['  shift 11
	.  error

	listaIndentificadores  goto 12


state 9
	programa : listaDeclaraciones VOID MAIN . "()" '{' listaSentencias '}'  (1)

	"()"  shift 13
	.  error


state 10
	listaIndentificadores : ID .  (3)

	.  reduce 3


state 11
	tipo : tipo '[' . CTE_ENTERA ']'  (21)

	CTE_ENTERA  shift 14
	.  error


state 12
	declaracion : tipo listaIndentificadores . ';'  (2)
	listaIndentificadores : listaIndentificadores . ',' ID  (4)

	';'  shift 15
	','  shift 16
	.  error


state 13
	programa : listaDeclaraciones VOID MAIN "()" . '{' listaSentencias '}'  (1)

	'{'  shift 17
	.  error


state 14
	tipo : tipo '[' CTE_ENTERA . ']'  (21)

	']'  shift 18
	.  error


state 15
	declaracion : tipo listaIndentificadores ';' .  (2)

	.  reduce 2


state 16
	listaIndentificadores : listaIndentificadores ',' . ID  (4)

	ID  shift 19
	.  error


state 17
	programa : listaDeclaraciones VOID MAIN "()" '{' . listaSentencias '}'  (1)
	listaSentencias : .  (7)

	.  reduce 7

	listaSentencias  goto 20


state 18
	tipo : tipo '[' CTE_ENTERA ']' .  (21)

	.  reduce 21


state 19
	listaIndentificadores : listaIndentificadores ',' ID .  (4)

	.  reduce 4


state 20
	programa : listaDeclaraciones VOID MAIN "()" '{' listaSentencias . '}'  (1)
	listaSentencias : listaSentencias . sentencia  (8)

	CTE_ENTERA  shift 21
	READ  shift 22
	WRITE  shift 23
	'-'  shift 24
	'}'  shift 25
	.  error

	sentencia  goto 26
	expresion  goto 27
	escritura  goto 28
	lectura  goto 29
	asignacion  goto 30


state 21
	expresion : CTE_ENTERA .  (29)

	.  reduce 29


state 22
	lectura : READ . listaExpresiones ';'  (16)

	CTE_ENTERA  shift 21
	'-'  shift 24
	.  error

	listaExpresiones  goto 31
	expresion  goto 32


state 23
	escritura : WRITE . listaExpresiones ';'  (15)

	CTE_ENTERA  shift 21
	'-'  shift 24
	.  error

	listaExpresiones  goto 33
	expresion  goto 32


state 24
	expresion : '-' . expresion  (28)

	CTE_ENTERA  shift 21
	'-'  shift 24
	.  error

	expresion  goto 34


state 25
	programa : listaDeclaraciones VOID MAIN "()" '{' listaSentencias '}' .  (1)

	.  reduce 1


state 26
	listaSentencias : listaSentencias sentencia .  (8)

	.  reduce 8


state 27
	sentencia : expresion . ';'  (14)
	asignacion : expresion . '=' expresion ';'  (17)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '*' expresion  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion . '/' expresion  (25)
	expresion : expresion . '%' expresion  (26)
	expresion : expresion . '[' expresion ']'  (27)

	'['  shift 35
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'%'  shift 39
	'/'  shift 40
	';'  shift 41
	'='  shift 42
	.  error


state 28
	sentencia : escritura .  (11)

	.  reduce 11


state 29
	sentencia : lectura .  (12)

	.  reduce 12


state 30
	sentencia : asignacion .  (13)

	.  reduce 13


state 31
	listaExpresiones : listaExpresiones . ", " expresion  (10)
	lectura : READ listaExpresiones . ';'  (16)

	';'  shift 43
	", "  shift 44
	.  error


state 32
	listaExpresiones : expresion .  (9)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '*' expresion  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion . '/' expresion  (25)
	expresion : expresion . '%' expresion  (26)
	expresion : expresion . '[' expresion ']'  (27)

	'['  shift 35
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'%'  shift 39
	'/'  shift 40
	';'  reduce 9
	", "  reduce 9


state 33
	listaExpresiones : listaExpresiones . ", " expresion  (10)
	escritura : WRITE listaExpresiones . ';'  (15)

	';'  shift 45
	", "  shift 44
	.  error


state 34
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '*' expresion  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion . '/' expresion  (25)
	expresion : expresion . '%' expresion  (26)
	expresion : expresion . '[' expresion ']'  (27)
	expresion : '-' expresion .  (28)

	.  reduce 28


state 35
	expresion : expresion '[' . expresion ']'  (27)

	CTE_ENTERA  shift 21
	'-'  shift 24
	.  error

	expresion  goto 46


state 36
	expresion : expresion '+' . expresion  (22)

	CTE_ENTERA  shift 21
	'-'  shift 24
	.  error

	expresion  goto 47


state 37
	expresion : expresion '-' . expresion  (24)

	CTE_ENTERA  shift 21
	'-'  shift 24
	.  error

	expresion  goto 48


state 38
	expresion : expresion '*' . expresion  (23)

	CTE_ENTERA  shift 21
	'-'  shift 24
	.  error

	expresion  goto 49


state 39
	expresion : expresion '%' . expresion  (26)

	CTE_ENTERA  shift 21
	'-'  shift 24
	.  error

	expresion  goto 50


state 40
	expresion : expresion '/' . expresion  (25)

	CTE_ENTERA  shift 21
	'-'  shift 24
	.  error

	expresion  goto 51


state 41
	sentencia : expresion ';' .  (14)

	.  reduce 14


state 42
	asignacion : expresion '=' . expresion ';'  (17)

	CTE_ENTERA  shift 21
	'-'  shift 24
	.  error

	expresion  goto 52


state 43
	lectura : READ listaExpresiones ';' .  (16)

	.  reduce 16


state 44
	listaExpresiones : listaExpresiones ", " . expresion  (10)

	CTE_ENTERA  shift 21
	'-'  shift 24
	.  error

	expresion  goto 53


state 45
	escritura : WRITE listaExpresiones ';' .  (15)

	.  reduce 15


state 46
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '*' expresion  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion . '/' expresion  (25)
	expresion : expresion . '%' expresion  (26)
	expresion : expresion . '[' expresion ']'  (27)
	expresion : expresion '[' expresion . ']'  (27)

	'['  shift 35
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'%'  shift 39
	'/'  shift 40
	']'  shift 54
	.  error


state 47
	expresion : expresion . '+' expresion  (22)
	expresion : expresion '+' expresion .  (22)
	expresion : expresion . '*' expresion  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion . '/' expresion  (25)
	expresion : expresion . '%' expresion  (26)
	expresion : expresion . '[' expresion ']'  (27)

	'*'  shift 38
	'%'  shift 39
	'/'  shift 40
	'['  reduce 22
	'+'  reduce 22
	'-'  reduce 22
	';'  reduce 22
	", "  reduce 22
	'='  reduce 22
	']'  reduce 22


state 48
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '*' expresion  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion '-' expresion .  (24)
	expresion : expresion . '/' expresion  (25)
	expresion : expresion . '%' expresion  (26)
	expresion : expresion . '[' expresion ']'  (27)

	'*'  shift 38
	'%'  shift 39
	'/'  shift 40
	'['  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	';'  reduce 24
	", "  reduce 24
	'='  reduce 24
	']'  reduce 24


state 49
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '*' expresion  (23)
	expresion : expresion '*' expresion .  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion . '/' expresion  (25)
	expresion : expresion . '%' expresion  (26)
	expresion : expresion . '[' expresion ']'  (27)

	'/'  shift 40
	'['  reduce 23
	'+'  reduce 23
	'-'  reduce 23
	'*'  reduce 23
	'%'  reduce 23
	';'  reduce 23
	", "  reduce 23
	'='  reduce 23
	']'  reduce 23


state 50
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '*' expresion  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion . '/' expresion  (25)
	expresion : expresion . '%' expresion  (26)
	expresion : expresion '%' expresion .  (26)
	expresion : expresion . '[' expresion ']'  (27)

	'/'  shift 40
	'['  reduce 26
	'+'  reduce 26
	'-'  reduce 26
	'*'  reduce 26
	'%'  reduce 26
	';'  reduce 26
	", "  reduce 26
	'='  reduce 26
	']'  reduce 26


state 51
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '*' expresion  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion . '/' expresion  (25)
	expresion : expresion '/' expresion .  (25)
	expresion : expresion . '%' expresion  (26)
	expresion : expresion . '[' expresion ']'  (27)

	.  reduce 25


state 52
	asignacion : expresion '=' expresion . ';'  (17)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '*' expresion  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion . '/' expresion  (25)
	expresion : expresion . '%' expresion  (26)
	expresion : expresion . '[' expresion ']'  (27)

	'['  shift 35
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'%'  shift 39
	'/'  shift 40
	';'  shift 55
	.  error


state 53
	listaExpresiones : listaExpresiones ", " expresion .  (10)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '*' expresion  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion . '/' expresion  (25)
	expresion : expresion . '%' expresion  (26)
	expresion : expresion . '[' expresion ']'  (27)

	'['  shift 35
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'%'  shift 39
	'/'  shift 40
	';'  reduce 10
	", "  reduce 10


state 54
	expresion : expresion '[' expresion ']' .  (27)

	.  reduce 27


state 55
	asignacion : expresion '=' expresion ';' .  (17)

	.  reduce 17


39 terminals, 13 nonterminals
30 grammar rules, 56 states
